--- a/index.html
+++ b/index.html
@@ -11,12 +11,31 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <title>Makoveev Portfolio</title>
   </head>
   <body>
+    <header class="header">
+      <div class="nav__bar">
+        <div class="container">
+          <div class="nav__bar__inner">
+            <img src="./assets/LOGO.svg" alt="Makoveev" class="logo" />
+            <ul class="nav__links">
+              <li><a href="#" class="nav__link">about me.</a></li>
+              <li><a href="#" class="nav__link">skills.</a></li>
+              <li><a href="#" class="nav__link">pet-projects.</a></li>
+              <li><a href="#" class="nav__link">contacts.</a></li>
+            </ul>
+            <a href="#" class="tg__btn">
+              <img src="./assets/tg.svg" alt="tg" />
+              Telegram
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
     <script src="./script.js"></script>
   </body>
 </html>
