--- a/index.html
+++ b/index.html
@@ -17,25 +17,23 @@
     <title>Makoveev Portfolio</title>
   </head>
   <body>
-    <header class="header">
-      <div class="nav__bar">
-        <div class="container">
-          <div class="nav__bar__inner">
-            <img src="./assets/LOGO.svg" alt="Makoveev" class="logo" />
-            <ul class="nav__links">
-              <li><a href="#" class="nav__link">about me.</a></li>
-              <li><a href="#" class="nav__link">skills.</a></li>
-              <li><a href="#" class="nav__link">pet-projects.</a></li>
-              <li><a href="#" class="nav__link">contacts.</a></li>
-            </ul>
-            <a href="#" class="tg__btn">
-              <img src="./assets/tg.svg" alt="tg" />
-              Telegram
-            </a>
-          </div>
+    <div class="nav__bar">
+      <div class="container">
+        <div class="nav__bar__inner">
+          <img src="./assets/LOGO.svg" alt="LOGO" class="logo" />
+          <ul class="nav__links">
+            <li><a href="#" class="nav__link">about me.</a></li>
+            <li><a href="#" class="nav__link">skills.</a></li>
+            <li><a href="#" class="nav__link">pet-projects.</a></li>
+            <li><a href="#" class="nav__link">contacts.</a></li>
+          </ul>
+          <a href="#" class="tg__btn">
+            <img src="./assets/tg.svg" alt="tg" />
+            Telegram
+          </a>
         </div>
       </div>
-    </header>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
