--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <link rel="icon" type="image/png" href="./assets/favicon.svg" />
     <!-- STYLES -->
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./responsive.css" />
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
     <title>Makoveev Portfolio</title>
@@ -34,6 +39,36 @@
         </div>
       </div>
     </div>
+
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <div class="header__inner__content">
+            <h1>
+              Маковеев
+              <span class="red">Ярослав</span>
+              Андреевич
+            </h1>
+            <p>Начинающий frontend-разработчик.</p>
+            <p>
+              Закончил колледж при ВлГУ по специальности “Разработчик веб- и
+              мультимедийных приложений”.
+            </p>
+            <p>
+              На данный момент заочно обучаюсь на бакалавриате по направлению
+              “Информационные системы и программирование”.
+            </p>
+            <p>
+              Активно ищу первый коммерческий опыт в IT и открыт к интересным
+              задачам
+            </p>
+          </div>
+          <div class="header__inner__photo">
+            <img src="./assets/photo.png" alt="photo" />
+          </div>
+        </div>
+      </div>
+    </header>
     <script src="./script.js"></script>
   </body>
 </html>
