--- a/index.html
+++ b/index.html
@@ -69,6 +69,36 @@
         </div>
       </div>
     </header>
+
+    <main class="main">
+      <div class="skills">
+        <div class="container">
+          <div class="skills__inner">
+            <h1 class="skills__header">Skills</h1>
+            <div class="skills__container">
+              <div class="skill">
+                <img src="./assets/Html5.svg" alt="html" />
+              </div>
+              <div class="skill">
+                <img src="./assets/CSS3.svg" alt="css" />
+              </div>
+              <div class="skill">
+                <img src="./assets/JavaScript.svg" alt="JS" />
+              </div>
+              <div class="skill">
+                <img src="./assets/React.svg" alt="react" />
+              </div>
+              <div class="skill">
+                <img src="./assets/Postman.svg" alt="postman" />
+              </div>
+              <div class="skill">
+                <img src="./assets/figma.svg" alt="figma" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
