--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <img src="./assets/LOGO.svg" alt="LOGO" class="logo" />
           <ul class="nav__links">
             <li><a href="#" class="nav__link">about me.</a></li>
-            <li><a href="#" class="nav__link">skills.</a></li>
+            <li><a href="#skills" class="nav__link">skills.</a></li>
             <li><a href="#" class="nav__link">pet-projects.</a></li>
             <li><a href="#" class="nav__link">contacts.</a></li>
           </ul>
@@ -71,7 +71,7 @@
     </header>
 
     <main class="main">
-      <div class="skills">
+      <div class="skills" id="skills">
         <div class="container">
           <div class="skills__inner">
             <h1 class="skills__header">Skills</h1>
