--- a/index.html
+++ b/index.html
@@ -98,6 +98,46 @@
           </div>
         </div>
       </div>
+
+      <div class="projects">
+        <div class="container">
+          <div class="projects__inner">
+            <h1 class="skills__header" style="color: #1e1e1e">Pet-projects</h1>
+            <div class="project">
+              <div class="project__content">
+                <h1>Fake Store API</h1>
+                <p>
+                  Интернет-магазин с фильтрацией товаров по категории и названию
+                  и корзиной.
+                </p>
+                <p>Стек: React, React-bootstrap. Деплой на gitpages</p>
+                <a href="#" class="git__btn">Исходный код на GitHub</a>
+                <a href="#" class="git__btn">Посмотреть демо</a>
+              </div>
+              <div class="project__img">
+                <img src="./assets/fakestore.png" alt="store" />
+              </div>
+            </div>
+            <div class="project">
+              <div class="project__content">
+                <h1>Fake Store API</h1>
+                <p>
+                  Рандомное получение картинок собак. Добавление и удаление из
+                  избранного.
+                </p>
+                <p>Стек: HTML, CSS, JavaScript. Деплой на gitpages</p>
+                <div class="btns">
+                  <a href="#" class="git__btn">Исходный код на GitHub</a>
+                  <a href="#" class="git__btn">Посмотреть демо</a>
+                </div>
+              </div>
+              <div class="project__img">
+                <img src="./assets/dogs.png" alt="dogs" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="./script.js"></script>
   </body>
