--- a/index.html
+++ b/index.html
@@ -139,6 +139,19 @@
         </div>
       </div>
     </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__contacts">
+            <a href="#"><img src="./assets/mail.svg" alt="mail" /></a>
+            <a href="#"><img src="./assets/GitHub.svg" alt="git" /></a>
+            <a href="#"><img src="./assets/Telegram App.svg" alt="tg" /></a>
+            <a href="#"><img src="./assets/VK Circled.svg" alt="vk" /></a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
