--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
             <div class="project">
               <div class="project__content">
-                <h1>Fake Store API</h1>
+                <h1>The dogs API</h1>
                 <p>
                   Рандомное получение картинок собак. Добавление и удаление из
                   избранного.
