footer links fix

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <div class="nav__bar__inner">
           <img src="./assets/LOGO.svg" alt="LOGO" class="logo" />
           <ul class="nav__links">
-            <li><a href="#" class="nav__link">about me.</a></li>
+            <li><a href="#header" class="nav__link">about me.</a></li>
             <li><a href="#skills" class="nav__link">skills.</a></li>
-            <li><a href="#" class="nav__link">pet-projects.</a></li>
-            <li><a href="#" class="nav__link">contacts.</a></li>
+            <li><a href="#pet" class="nav__link">pet-projects.</a></li>
+            <li><a href="#contacts" class="nav__link">contacts.</a></li>
           </ul>
-          <a href="#" class="tg__btn">
+          <a href="https://t.me/+79011943319" class="tg__btn">
             <img src="./assets/tg.svg" alt="tg" />
             Telegram
           </a>
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <header class="header">
+    <header class="header" id="header">
       <div class="container">
         <div class="header__inner">
           <div class="header__inner__content">
@@ -99,7 +99,7 @@
         </div>
       </div>
 
-      <div class="projects">
+      <div class="projects" id="pet">
         <div class="container">
           <div class="projects__inner">
             <h1 class="skills__header" style="color: #1e1e1e">Pet-projects</h1>
@@ -140,18 +140,43 @@
       </div>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="contacts">
       <div class="container">
         <div class="footer__inner">
           <div class="footer__contacts">
-            <a href="#"><img src="./assets/mail.svg" alt="mail" /></a>
-            <a href="#"><img src="./assets/GitHub.svg" alt="git" /></a>
-            <a href="#"><img src="./assets/Telegram App.svg" alt="tg" /></a>
-            <a href="#"><img src="./assets/VK Circled.svg" alt="vk" /></a>
+            <a
+              href="https://e.mail.ru/compose/?mailto=y-makoveev@mail.ru"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img src="./assets/mail.svg" alt="mail" />
+            </a>
+            <a
+              href="https://github.com/YaroslavMakoveev"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img src="./assets/GitHub.svg" alt="git" />
+            </a>
+            <a
+              href="https://t.me/+79011943319"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img src="./assets/Telegram App.svg" alt="tg" />
+            </a>
+            <a
+              href="https://vk.com/molodoy18hooligan"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img src="./assets/VK Circled.svg" alt="vk" />
+            </a>
           </div>
         </div>
       </div>
     </footer>
+
     <script src="./script.js"></script>
   </body>
 </html>
