project btns & animations

--- a/index.html
+++ b/index.html
@@ -111,8 +111,18 @@
                   и корзиной.
                 </p>
                 <p>Стек: React, React-bootstrap. Деплой на gitpages</p>
-                <a href="#" class="git__btn">Исходный код на GitHub</a>
-                <a href="#" class="git__btn">Посмотреть демо</a>
+                <a
+                  href="https://github.com/YaroslavMakoveev/store_react_pet"
+                  target="_blank"
+                  class="git__btn"
+                  >Исходный код на GitHub</a
+                >
+                <a
+                  href="https://yaroslavmakoveev.github.io/store_react_pet/"
+                  target="_blank"
+                  class="git__btn"
+                  >Посмотреть демо</a
+                >
               </div>
               <div class="project__img">
                 <img src="./assets/fakestore.png" alt="store" />
@@ -127,8 +137,18 @@
                 </p>
                 <p>Стек: HTML, CSS, JavaScript. Деплой на gitpages</p>
                 <div class="btns">
-                  <a href="#" class="git__btn">Исходный код на GitHub</a>
-                  <a href="#" class="git__btn">Посмотреть демо</a>
+                  <a
+                    href="https://github.com/YaroslavMakoveev/dogs_react_pet"
+                    target="_blank"
+                    class="git__btn"
+                    >Исходный код на GitHub</a
+                  >
+                  <a
+                    href="https://yaroslavmakoveev.github.io/dogs_react_pet/"
+                    target="_blank"
+                    class="git__btn"
+                    >Посмотреть демо</a
+                  >
                 </div>
               </div>
               <div class="project__img">
