--- a/index.html
+++ b/index.html
@@ -111,18 +111,20 @@
                   и корзиной.
                 </p>
                 <p>Стек: React, React-bootstrap. Деплой на gitpages</p>
-                <a
-                  href="https://github.com/YaroslavMakoveev/store_react_pet"
-                  target="_blank"
-                  class="git__btn"
-                  >Исходный код на GitHub</a
-                >
-                <a
-                  href="https://yaroslavmakoveev.github.io/store_react_pet/"
-                  target="_blank"
-                  class="git__btn"
-                  >Посмотреть демо</a
-                >
+                <div class="btns">
+                  <a
+                    href="https://github.com/YaroslavMakoveev/store_react_pet"
+                    target="_blank"
+                    class="git__btn"
+                    >Исходный код на GitHub</a
+                  >
+                  <a
+                    href="https://yaroslavmakoveev.github.io/store_react_pet/"
+                    target="_blank"
+                    class="git__btn"
+                    >Посмотреть демо</a
+                  >
+                </div>
               </div>
               <div class="project__img">
                 <img src="./assets/fakestore.png" alt="store" />
